[gd_scene load_steps=12 format=3 uid="uid://cjbdfuvh8nxcn"]

[ext_resource type="Script" path="res://src/interactables/PadInteractable.gd" id="1_6nccy"]
[ext_resource type="PackedScene" uid="uid://05h0teol0odp" path="res://scenes/particle_emitter_presets/PadParticles.tscn" id="4_26ak1"]
[ext_resource type="Script" path="res://src/interactables/private_components/PulseCircle.gd" id="5_hg5x3"]
[ext_resource type="Script" path="res://src/interactables/public_components/ReboundComponent.gd" id="6_actth"]
[ext_resource type="Script" path="res://src/SingleUsage.gd" id="7_8bjuk"]
[ext_resource type="Script" path="res://src/interactables/public_components/DirectionChangerComponent.gd" id="8_lapvy"]
[ext_resource type="Script" path="res://src/interactables/private_components/ReboundPadSprite.gd" id="9_50uy8"]

[sub_resource type="Curve" id="Curve_6hqd0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_gy0q0"]
curve = SubResource("Curve_6hqd0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bto6p"]
resource_local_to_scene = true
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(40, 0, 0)
gravity = Vector3(0, -128, 0)
scale_min = 0.25
scale_max = 0.25
scale_curve = SubResource("CurveTexture_gy0q0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxki2"]
size = Vector2(92, 24)

[node name="ReboundPad" type="Area2D"]
process_priority = 1
process_physics_priority = 2
collision_layer = 8
script = ExtResource("1_6nccy")

[node name="ParticleEmitter" parent="." instance=ExtResource("4_26ak1")]
modulate = Color(1, 0.8, 0.8, 1)
position = Vector2(0, 57)
process_material = SubResource("ParticleProcessMaterial_bto6p")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 55)
shape = SubResource("RectangleShape2D_qxki2")
debug_color = Color(0, 1, 0, 0)

[node name="PulseCircle" type="Node2D" parent="."]
position = Vector2(0, 57)
script = ExtResource("5_hg5x3")

[node name="ReboundComponent" type="Node" parent="."]
script = ExtResource("6_actth")

[node name="SingleUsageComponent" type="Node" parent="."]
script = ExtResource("7_8bjuk")

[node name="DirectionChangerComponent" type="Node" parent="."]
script = ExtResource("8_lapvy")

[node name="ClippingMask" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(-64, -64, -64, 64, 64, 64, 64, -64)

[node name="ReboundPadSprite" type="Node2D" parent="ClippingMask"]
position = Vector2(0, 64)
script = ExtResource("9_50uy8")
